# fastapi_trial

./: .env  .gitignore  Dockerfile  docker-compose.yaml  note.md  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: a2e82e5ef9b1_first_migration.py
app/: __main__.py  app.py  database.py  pyproject.toml  settings.py
app/alembic/: env.py
app/api/: __init__.py  auth.py  operations.py
app/models/: auth.py  operations.py
app/services/: auth.py  operations.py
my_finance/: __main__.py  database.py  requirements.txt  settings.py  tables.py
my_finance/api/: __init__.py  auth.py  operations.py
my_finance/services/: auth.py  operations.py
